Creating the About Page for TechCon 2024 Conference Website

--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -33,7 +33,7 @@
         </article>
         
         <article>
-            <h2>Past Notable Speakers</h2>
+            <h2>Past Speakers</h2>
             
             <h3>Dr. Elena Martinez (2023)</h3>
             <img src="images/elena-martinez.jpg" alt="Dr. Elena Martinez, AI researcher and TechCon 2023 keynote speaker" width="300">
